fixed alignment

--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,7 @@ body {
     font-family: 'Courier New', Courier, monospace;
     background-color: mistyrose;
 }
-h1,
-h2,
-h3 {
+
+.centered {
     text-align: center;
 }
